@@ -1493,17 +1493,18 @@ flo_round(int argc, VALUE *argv, VALUE num)
     int ndigits = 0;
     int binexp;
     long val;
+    enum {float_dig = DBL_DIG+2};
 
     if (argc > 0 && rb_scan_args(argc, argv, "01", &nd) == 1) {
 	ndigits = NUM2INT(nd);
     }
     number  = RFLOAT_VALUE(num);
-    frexp (number , &binexp);
+    frexp(number, &binexp);
 
 /* Let `exp` be such that `number` is written as:"0.#{digits}e#{exp}",
    i.e. such that  10 ** (exp - 1) <= |number| < 10 ** exp
-   Recall that up to 17 digits can be needed to represent a double,
-   so if ndigits + exp >= 17, the intermediate value (number * 10 ** ndigits)
+   Recall that up to float_dig digits can be needed to represent a double,
+   so if ndigits + exp >= float_dig, the intermediate value (number * 10 ** ndigits)
    will be an integer and thus the result is the original number.
    If ndigits + exp <= 0, the result is 0 or "1e#{exp}", so
    if ndigits + exp < 0, the result is 0.
@@ -1514,7 +1515,7 @@ flo_round(int argc, VALUE *argv, VALUE num)
 	   10 ** (binexp/4 - 1) < |number| < 10 ** (binexp/3)
 	   binexp/4 <= exp <= binexp/3
 	If binexp <= 0, swap the /4 and the /3
-	So if ndigits + binexp/(4 or 3) >= 17, the result is number
+	So if ndigits + binexp/(4 or 3) >= float_dig, the result is number
 	If ndigits + binexp/(3 or 4) < 0 the result is 0
 */
     if (isinf(number) || isnan(number)) {
@@ -1523,7 +1524,7 @@ flo_round(int argc, VALUE *argv, VALUE num)
     else if ((long)ndigits * (4 - (binexp > 0)) + binexp < 0) {
 	number = 0;
     }
-    else if (((long)ndigits - 17) * (3 + (binexp > 0)) + binexp < 0) {
+    else if (((long)ndigits - float_dig) * (3 + (binexp > 0)) + binexp < 0) {
 	f = pow(10, abs(ndigits));
 	if (ndigits < 0) {
 	    double absnum = fabs(number);
